--- a/Server/appsettings.json
+++ b/Server/appsettings.json
@@ -7,6 +7,6 @@
     }
   },
   "AllowedHosts": "*",
-  "SUBSCRIPTION_KEY": "0f8fecf7011745ff9a8f2fbd7e684428",
-  "REGION": "westeurope"
+  "SUBSCRIPTION_KEY": "SUBSCRIPTION_KEY",
+  "REGION": "REGION"
 }
